--- a/_config.yml
+++ b/_config.yml
@@ -12,10 +12,10 @@ linkedin_username:
 facebook_username:
 
 # External API
-giscus_repo: "byanko55/jekyll-theme-satellite"
-giscus_repoId: "R_kgDOJ6fqWg"
+giscus_repo: "swallowlikeyoshi/swallowlikeyoshi.github.io"
+giscus_repoId: "R_kgDONkQwiw"
 giscus_category: "Q&A"
-giscus_categoryId: "DIC_kwDOJ6fqWs4Cc7p7"
+giscus_categoryId: "DIC_kwDONkQwi84Clu2E"
 goatcounter_code: byanko77
 google_analytics:
 
