--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ giscus_repo: "swallowlikeyoshi/swallowlikeyoshi.github.io"
 giscus_repoId: "R_kgDONkQwiw"
 giscus_category: "Q&A"
 giscus_categoryId: "DIC_kwDONkQwi84Clu2E"
-goatcounter_code: byanko77
+goatcounter_code: swallowlikeyoshi
 google_analytics:
 
 # If your repo name follows the format "<user-name>.github.io", then leave the below blank.
