--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: 코드디미방
-description: "전자회로, 코딩, 컴퓨터 등"
+description: "이 세상 모든 지식의 끝은 어디일까?"
 logo_img: "/assets/img/favicon.jpg"
 profile_img: "/assets/img/profile.jpg"
 
